--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -13,6 +13,7 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 
 ### [J] Journal Articles
 <ol reversed>
+<li>Alfian, G., Octava, M.Q.H., Hilmy, F.M., Nurhaliza, R.A., Saputra, Y.M., Putri, D.G.P., Syahrian, F., Fitriyani, N.L., Atmaji, F.T.D., Farooq, U., ... , <b>Syafrudin, M.*</b> (2023) Customer Shopping Behavior Analysis Using RFID and Machine Learning Models. Information 2023, 14, 551. https://doi.org/10.3390/info14100551</li>
 <li>Nasir, I.M., Raza, M., Ulyah, S.M., Shah, J.H., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) ENGA: Elastic Net-Based Genetic Algorithm for Human Action Recognition. Expert Systems with Applications, 227, 120311, doi:10.1016/j.eswa.2023.120311.</li>
 <li>Ramaha, N.T.A., Mahmood, R.M., Hameed, A.A., Fitriyani, N.L., Alfian, G., <b>Syafrudin, M.*</b> (2023) Brain Pathology Classification of MR Images Using Machine Learning Techniques. Computers, 12, 167, doi:10.3390/computers12080167.</li>
 <li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Identifying Factors to Develop and Validate Social Vulnerability to Floods in Malaysia: A Systematic Review Study. Sustainability, 15, 12729, doi:10.3390/su151712729.</li>
@@ -59,8 +60,7 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 <li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>.
 </li>
 <li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6.<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[Link]</a></li>
-<li>Sugiantoro, B., Humam, A.I., Fitriyani, N.L., Alfian, G., Maarif, M.R., <b>Syafrudin, M.</b> Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. In Proceedings of the 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE) (ICITACEE 2023), Indonesia, August 2023, p. 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[Link]</a>
-</li>
+<li>Sugiantoro, B., Humam, A. I., Fitriyani, N. L., Alfian, G., Maarif, M. R., & <b>Syafrudin, M.</b> (2023). Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE), 121–126. https://doi.org/10.1109/ICITACEE58587.2023.10277046</li>
 <li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Hadibarata, T., Rhee, J., Anshari, M. Future Glycemic Events Prediction Model Based On Artificial Neural Network. In Proceedings of the 2022 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT), IEEE: Sakheer, Bahrain, November 20 2022, pp. 151–155.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT56508.2022.9990708'>[Link]</a></li>
 <li>Fitriyani, N. L., <b>Syafrudin, M.</b>, Alfian, G., Yang, C. K., Rhee, J., & Ulyah, S. M. Chronic Disease Prediction Model Using Integration of DBSCAN, SMOTE-ENN, and Random Forest. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 289-294). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888806'>[Link]</a></li>
 <li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N. L., Fahrurrozi, I., Anshari, M., & Rhee, J. A Personalized Blood Glucose Prediction Model Using Random Forest Regression. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 295-299). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888838'>[Link]</a></li>
